[package]
name = "nfo2tags"
version = "1.0.5"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
indicatif = "0.18.0"
log = "0.4.27"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
walkdir = "2.5.0"
xml = "0.8.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
